# BarioGame

./: .gitignore  Bario.sln  Bario.vcxproj  Bario.vcxproj.filters  CMakeLists.txt  MarioModel.mdj  Source.cpp  fig2.txt  map.h  platformer.sln  platformer.vcxproj  platformer.vcxproj.filters.txt  platformer.vcxproj.xml
Debug/: Bario.ilk  vc142.idb
Debug/Bario.tlog/: Bario.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
doc/: MarioModel.mdj
res/: example_map.txt  part0.txt  part1.txt  part2.txt  part3.txt  part_boss.txt  Новый текстовый документ.txt
src/: BaseUnit.cpp  BaseUnit.h  Buzzer.cpp  Buzzer.h  FactoryBonus.cpp  FactoryBonus.h  FactoryEnemy.cpp  FactoryEnemy.h  Flower.cpp  Flower.h  GUI.cpp  GUI.h  Game.cpp  Game.h  IBonus.h  IBoss.h  IEnemy.h  IMap.h  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  Mushroom.cpp  Mushroom.h  Player.cpp  Player.h  Sound.cpp  Sound.h  Turtle.cpp  Turtle.h  main.cpp  old_Source.cpp  result.txt
x64/Debug/: vc142.idb
x64/Debug/Bario.tlog/: Bario.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
